# claude-monitor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
docs/: analyze.md  hooks.md  schema.md
hooks/: dispatch.py
monitor/: __init__.py  __main__.py  analyze.py  cli.py  db.py  tmpfiles.py  tui.py
tests/: test_analyze.py  test_db.py  test_tmpfiles.py  test_tui_helpers.py
