[project]
name = "monitor"
version = "0.3.0"
description = "Claude Code monitoring + cross-session analysis"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
