[project]
name = "monitor"
version = "0.4.1"
description = "Claude Code monitoring + cross-session analysis"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
    "textual>=0.86",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
